--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Cosas de eclipse
+.project
+.cproject
+
+# Cosas de VSCode
+.code-workspace
