--- a/Mi-RAM/cfg/miram.config
+++ b/Mi-RAM/cfg/miram.config
@@ -3,5 +3,6 @@ ESQUEMA_MEMORIA=SEGMENTACION
 TAMANIO_PAGINA=64
 TAMANIO_SWAP=4096
 PATH_SWAP=/home/utnso/swapFile.bin
-ALGORITMO_REEMPLAZO=FIRST_FIT
+ALGORITMO_REEMPLAZO=LRU
+CRITERIO_SELECCION=FF
 PUERTO=3500
