agrego eliminar tripulante y actualizar estado

--- a/Mi-RAM/cfg/miram.config
+++ b/Mi-RAM/cfg/miram.config
@@ -4,4 +4,5 @@ TAMANIO_PAGINA=64
 TAMANIO_SWAP=4096
 PATH_SWAP=/home/utnso/swapFile.bin
 ALGORITMO_REEMPLAZO=FIRST_FIT
+CRITERIO_SELECCION=FIRST_FIT
 PUERTO=3500
