--- a/Mi-RAM/cfg/miram.config
+++ b/Mi-RAM/cfg/miram.config
@@ -1,8 +1,8 @@
-TAMANIO_MEMORIA=396
-ESQUEMA_MEMORIA=SEGMENTACION
-TAMANIO_PAGINA=64
+TAMANIO_MEMORIA=2048
+ESQUEMA_MEMORIA=PAGINACION
+TAMANIO_PAGINA=32
 TAMANIO_SWAP=4096
 PATH_SWAP=/home/utnso/swapFile.bin
-ALGORITMO_REEMPLAZO=FIRST_FIT
+ALGORITMO_REEMPLAZO=LRU
 CRITERIO_SELECCION=FIRST_FIT
 PUERTO=3500
