--- a/I-MongoStore/cfg/imongo.config
+++ b/I-MongoStore/cfg/imongo.config
@@ -1,6 +1,6 @@
 PUNTO_MONTAJE=./FileSystem
 PUERTO=5100
 TIEMPO_SINCRONIZACION=10
-POSICIONES_SABOTAJE=[1|1, 2|2, 3|3, 4|4, 5|5, 6|6, 7|7]
+POSICIONES_SABOTAJE=[9|9,1|1]
 BLOCK_SIZE=60
 CANTIDAD_BLOCKS=500
