--- a/I-MongoStore/cfg/imongo.config
+++ b/I-MongoStore/cfg/imongo.config
@@ -1,6 +1,6 @@
 PUNTO_MONTAJE=./FileSystem
 PUERTO=5100
-TIEMPO_SINCRONIZACION=1
+TIEMPO_SINCRONIZACION=12
 POSICIONES_SABOTAJE=[1|1,7|1,7|7,1|7,4|4]
-BLOCK_SIZE=32
+BLOCK_SIZE=64
 CANTIDAD_BLOCKS=16384
