--- a/Discordiador/cfg/discordiador.config
+++ b/Discordiador/cfg/discordiador.config
@@ -1,9 +1,9 @@
-IP_MI_RAM_HQ=10.108.96.4
+IP_MI_RAM_HQ=127.0.0.1
 PUERTO_MI_RAM_HQ=3500
-IP_I_MONGO_STORE=10.108.96.3
+IP_I_MONGO_STORE=127.0.0.1
 PUERTO_I_MONGO_STORE=5100
-GRADO_MULTITAREA=2
-ALGORITMO=RR
+GRADO_MULTITAREA=3
+ALGORITMO=FIFO
 QUANTUM=1
 DURACION_SABOTAJE=10
 RETARDO_CICLO_CPU=1
