--- a/I-MongoStore/cfg/imongo.config
+++ b/I-MongoStore/cfg/imongo.config
@@ -1,7 +1,7 @@
 PUNTO_MONTAJE=./FileSystem
-IP=10.108.96.3
+IP=127.0.0.1
 PUERTO=5100
-TIEMPO_SINCRONIZACION=12
+TIEMPO_SINCRONIZACION=5
 POSICIONES_SABOTAJE=[1|1,7|1,7|7,1|7,4|4]
-BLOCK_SIZE=256
-CANTIDAD_BLOCKS=32768
+BLOCK_SIZE=32
+CANTIDAD_BLOCKS=16384
