--- a/Mi-RAM/cfg/miram.config
+++ b/Mi-RAM/cfg/miram.config
@@ -3,7 +3,7 @@ ESQUEMA_MEMORIA=PAGINACION
 TAMANIO_PAGINA=32
 TAMANIO_SWAP=16384
 PATH_SWAP=/home/utnso/swapFile.bin
-ALGORITMO_REEMPLAZO=CLOCK
+ALGORITMO_REEMPLAZO=LRU
 CRITERIO_SELECCION=BEST_FIT
 IP=127.0.0.1
 PUERTO=3500
